--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Shop With Voice</title>
+    <style>
+      h1 {text-align: center;}
+      h2 {text-align: center;}
+      p {text-align: center;}
+      div {text-align: center;}
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div>
+      <h1 style="font-size:30px"><strong>SHOP WITH VOICE</strong> </h1>
+      <p><h2>
+        Shop with Voice is a Grocery Shopping portal with an inbuilt Voice Assistant. </h2>
+        <h2>
+        Click on the Microphone icon in top-left corner of your screen to access Voice Assistant. </h2>
+        <h2>
+        Try asking it to "open the cart","add oranges to the cart", "close cart", 
+        "remove oranges from the cart", etc.</h2>
+        <h2>Make sure to say the correct name of your item like bananas and not a banana.</h2>
+       <h2>Thanks, Have fun shopping with Voice!</h2>
+      </p>
+    </div>    
     <div id="root"></div>
     <!--
       This HTML file is a template.
