--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <h2>
         Try asking it to "open the cart","add oranges to the cart", "close cart", 
         "remove oranges from the cart", etc.</h2>
-        <h2>Make sure to say the correct name of your item like bananas and not a banana.</h2>
+        <h2>Make sure to say the correct name of your item like "bananas" and not a "banana".</h2>
        <h2>Thanks, Have fun shopping with Voice!</h2>
       </p>
     </div>    
